# Gen-AI-Roadmap

./: .gitignore  00_environment_setup.ipynb  00_huggingface_setup.ipynb  BEGINNER_ASSESSMENT.md  CAPSTONE_COMPLETE.md  CAPSTONE_PROJECT.md  COURSE_CONNECTIONS.md  COURSE_HF_INTEGRATION.md  COURSE_REVIEW.md  COURSE_SUMMARY.md  DOCUMENTATION_OVERHAUL.md  FAQ.md  FINAL_REVIEW_SUMMARY.md  GETTING_STARTED.md  GETTING_STARTED_DETAILED.md  HUGGINGFACE_MIGRATION.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_MADE.md  KUBERNETES_INTEGRATION_SUMMARY.md  MANUAL_NOTEBOOK_UPDATE.md  PROGRESS_TRACKER.md  QUICK_START.md  README.md  README_DETAILED.md  SECOND_REVIEW.md  requirements.txt
.devcontainer/: devcontainer.json
capstone_project/: .env.example  .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_GUIDE.md  KUBERNETES_DEPLOYMENT.md  LICENSE  LOCAL_SETUP_GUIDE.md  PRODUCTION_READINESS.md  README.md  SETUP_GUIDE.md  docker-compose-full.yml  docker-compose.yml  requirements-dev.txt  requirements-full.txt  requirements.txt
capstone_project/app/: __init__.py  agents.py  analytics_agent.py  config.py  main.py  ml_agent.py  models.py  pyproject.toml  security.py
capstone_project/app/functions/feedback/: main.py  requirements.txt
reports/: notebook_review.json  notebook_review.md
scripts/: update_notebooks_to_hf.py
week-01-02-python-ml-foundations/: 01_environment_setup.ipynb  02_python_essentials.ipynb  03_numpy_pandas.ipynb  04_data_visualization.ipynb  05_ml_sklearn.ipynb  HOMEWORK.md  README.md
week-03-04-deep-learning-nlp/: 01_neural_networks.ipynb  (+8 more)
(+125 files in other folders)
